fix flexbox align

--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,7 @@ header {
 .container {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .portfolio-image,
